welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:9: error: '(' expected but identifier found.
      if BB >= 3 {
         ^Poucet:14: error: illegal start of simple expression
    }
    ^